Added Projects Section with Animations

--- a/src/index.html
+++ b/src/index.html
@@ -30,37 +30,37 @@
         </div>
         <div class="collapse navbar-collapse" collapse="menuCollapsed">
           <ul class="nav navbar-nav nav-center">
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" ng-click="menuCollapsed = true">
               <a href ui-sref="home">
                 Home
               </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" ng-click="menuCollapsed = true">
               <a href ui-sref="about">
                 About Me
               </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" ng-click="menuCollapsed = true">
               <a href ui-sref="education">
                 Education
               </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" ng-click="menuCollapsed = true">
               <a href ui-sref="work">
                 Employment
               </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" ng-click="menuCollapsed = true">
               <a href ui-sref="skills">
                 Skills
               </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" ng-click="menuCollapsed = true">
               <a href ui-sref="projects">
                 Projects
               </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" ng-click="menuCollapsed = true">
               <a href ui-sref="contact">
                 Contact
               </a>
