--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-inner">
-          Footer
+          FFOOOOOOTTT
         </div>
       </div>
     </footer>
