Added Styling Modifications

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
             </li>
             <li ui-sref-active="active" ng-click="menuCollapsed = true">
               <a href ui-sref="contact">
-                Contact
+                Contact Me
               </a>
             </li>
           </ul>
